# gr

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
cfg_reducer/: __init__.py  algorithm.py  engine.py  metagraph.py  motif.py  store.py  types.py
docs/: discussion_log.md
docs/plans/: metagraph_impl.md  metagraph_prompt.txt
tests/: test_metagraph.py
